--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
 #intro-screen {
   height: 100vh;
   border: 1px solid black;
-  background-image: url("help-pixelart/Designer\(6\).jpeg");
+  background-image: url("images/Designer\(6\).jpeg");
 }
 
 #start-button-img {
@@ -55,6 +55,26 @@
   width: 260px;
   height: 200px;
   padding-left: 34%;
+}
+
+#enemyHealthBar {
+  border: 1px solid black;
+  width: 50%;
+  height: 4%;
+  margin-left: 28%;
+  border-radius: 5px;
+}
+
+#enemyCurrentHealth {
+  width: 100%;
+  height: 100%;
+  background-color: rgb(195, 22, 22);
+  border-radius: 5px;
+  text-align: center;
+  align-content: center;
+  font-weight: bold;
+  color: white;
+  font-size: 20px;
 }
 
 .cards-img {
