--- a/styles.css
+++ b/styles.css
@@ -44,9 +44,12 @@
 
 .card-inventory {
   display: flex;
-  height: 100%;
-  justify-content: center;
+  border: 1px solid black;
+  margin-top: 15%;
+  align-content: center;
   align-items: center;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
 #card-holder {
@@ -55,6 +58,10 @@
   display: flex;
   text-align: center;
   padding: 1%;
+  border: 1px solid black;
+  justify-self: center;
+  align-self: center;
+  height: 100%;
 }
 
 .card {
@@ -68,6 +75,7 @@
   text-align: center;
   padding-top: 5%;
   padding-bottom: 40%;
+  align-self: center;
 }
 
 #card-name {
