--- a/styles.css
+++ b/styles.css
@@ -13,10 +13,9 @@
 }
 
 #instructions-button {
-  height: 95px;
-  width: 225px;
-  margin-top: 1%;
-  margin-left: 13%;
+  height: 500px;
+  width: 800px;
+  margin-left: -110px;
 }
 
 #instructions-button-div {
@@ -25,10 +24,11 @@
 
 #instructions-img {
   display: none;
-  margin-left: 30%;
-  margin-top: -45%;
-  width: 600px;
-  height: 800px;
+  align-self: center;
+  margin-left: 50%;
+  margin-top: -75%;
+  width: 400px;
+  height: 600px;
 }
 
 /* separation */
@@ -44,8 +44,6 @@
 
 .card-inventory {
   display: flex;
-  border: 1px solid black;
-  margin-top: 15%;
   align-content: center;
   align-items: center;
   flex-wrap: wrap;
@@ -53,65 +51,107 @@
 }
 
 #card-holder {
-  background-color: grey;
   gap: 10px;
   display: flex;
   text-align: center;
   padding: 1%;
-  border: 1px solid black;
   justify-self: center;
   align-self: center;
-  height: 100%;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
 }
 
 .card {
   display: flex;
   flex-direction: column;
   width: 150px;
-  height: 165px;
+  height: 10vw;
   padding: 20px;
   border: 1px solid black;
   padding: 30px;
   text-align: center;
-  padding-top: 5%;
-  padding-bottom: 40%;
+  padding-top: 9px;
+  padding-bottom: 20%;
   align-self: center;
+  background-color: rgb(0, 168, 107);
 }
 
 #card-name {
-  border: 1px solid black;
+  border: 2px solid black;
   margin-bottom: 5%;
   color: white;
+  background-color: peru;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-weight: bold;
+  padding: 2px;
 }
 
 .card-img {
   border: 1px solid black;
 }
 
-.enemy {
-  width: 260px;
-  height: 200px;
-  padding-left: 34%;
-}
-
-#enemyHealthBar {
+#stats-container {
+  padding: 10px;
+  margin-top: 5px;
+  padding-bottom: 30%;
+  color: white;
+  font-size: 13px;
   border: 1px solid black;
-  width: 50%;
-  height: 4%;
-  margin-left: 28%;
-  border-radius: 5px;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-weight: bold;
 }
 
-#enemyCurrentHealth {
-  width: 100%;
-  height: 100%;
+/* Enemy styling */
+/* Enemy styling */
+
+.enemy-card-inventory {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-content: center;
+  justify-items: center;
+  align-items: center;
+}
+
+/* #enemy-card-holder {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-content: center;
+} */
+
+.enemy-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-content: center;
+}
+
+.enemy-name-class {
+  color: wheat;
+  text-align: center;
+}
+
+.enemy-img {
+  width: 13%;
+  height: 15%;
+  justify-self: center;
+  align-self: center;
+}
+
+#enemy-health-container {
+  width: 50%;
+  height: 50%;
   background-color: rgb(195, 22, 22);
   border-radius: 5px;
   text-align: center;
   align-content: center;
   font-weight: bold;
   color: white;
-  font-size: 20px;
+  font-size: 18px;
+  align-self: center;
 }
 
 /* Card screens */
