--- a/styles.css
+++ b/styles.css
@@ -8,18 +8,20 @@
 #start-button-img {
   height: 170px;
   width: 450px;
-  margin-top: 25%;
+  margin-top: 35%;
   margin-left: 5%;
 }
 
 #instructions-button {
-  height: 500px;
-  width: 800px;
-  margin-left: -110px;
+  height: 200px;
+  width: 300px;
+  margin-left: 40%;
+  margin-bottom: 30%;
 }
 
 #instructions-button-div {
   margin-left: 285px;
+  height: 20%;
 }
 
 #instructions-img {
