--- a/styles.css
+++ b/styles.css
@@ -52,6 +52,7 @@
   align-items: center;
   flex-wrap: wrap;
   justify-content: center;
+  gap: 10px;
 }
 
 #card-holder {
@@ -70,21 +71,19 @@
 .card {
   display: flex;
   flex-direction: column;
-  width: 150px;
-  height: 10vw;
+  width: 180px;
+  height: 290px;
   padding: 20px;
+  padding-top: 8px;
   border: 1px solid black;
-  padding: 30px;
   text-align: center;
-  padding-top: 9px;
-  padding-bottom: 20%;
-  align-self: center;
   background-color: rgb(0, 168, 107);
+  box-sizing: border-box;
 }
 
 #card-name {
   border: 2px solid black;
-  margin-bottom: 5%;
+  margin-bottom: 3px;
   color: white;
   background-color: peru;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
@@ -93,13 +92,16 @@
 }
 
 .card-img {
+  max-width: 100%;
+  max-height: 200px;
   border: 1px solid black;
+  object-fit: contain;
 }
 
 #stats-container {
-  padding: 10px;
-  margin-top: 5px;
+  padding: 7px;
   padding-bottom: 30%;
+  height: 42px;
   color: white;
   font-size: 13px;
   border: 1px solid black;
@@ -107,20 +109,37 @@
   font-weight: bold;
 }
 
-/* .player-attack-img-div {
+.special-attack-container {
+  font-size: 8.5px;
+  color: black;
+  margin-top: 6px;
+}
+
+.player-attack-img-div {
   border: 1px, solid, black;
   align-items: center;
   align-content: center;
-  display: flex;
-} */
+}
 
 .player-attack-img {
+  position: absolute;
   align-self: center;
   align-self: center;
-  display: flex;
-  height: 40%;
-  margin-left: 8%;
+  width: 110px;
+  height: 110px;
+  display: none;
+  bottom: 115%;
+  z-index: 10;
 }
+/* To have attackimg appear in the middle of screen:
+position: absolute;
+align-self: center;
+align-self: center;
+height: 35%;
+display: none;
+z-index: 10;
+bottom: 130%;
+left: 43%; */
 
 /* Enemy styling */
 /* Enemy styling */
@@ -145,17 +164,21 @@
   color: white;
   text-align: center;
   font-weight: bold;
+  background-color: rgb(33, 33, 76);
+  width: 100px;
+  align-self: center;
+  border-radius: 5px;
 }
 
 .enemy-img {
-  width: 13%;
-  height: 15%;
+  width: 17%;
+  height: 17%;
   justify-self: center;
   align-self: center;
 }
 
 #enemy-health-container {
-  width: 50%;
+  width: 400px;
   height: 50%;
   background-color: rgb(195, 22, 22);
   border-radius: 5px;
@@ -168,9 +191,13 @@
 }
 
 #enemy-attack-container {
+  border-radius: 7px;
+  align-self: center;
+  width: 145px;
   text-align: center;
   font-weight: bold;
   color: white;
+  background-color: rgb(31, 20, 70);
 }
 
 /* Card screens */
