--- a/styles.css
+++ b/styles.css
@@ -46,6 +46,17 @@
   background-image: url("https://preview.redd.it/ancient-archway-in-a-meadow-v0-3vm8ot8l599a1.gif?format=png8&s=f1f02ee85c0ea6f81c0ef750349f00ca3ad63f69");
 }
 
+.level-counter {
+  font-size: 16px;
+  border: 3.5px solid peru;
+  right: 1%;
+  width: 80px;
+  position: absolute;
+  text-align: center;
+  background-color: rgb(0, 168, 107);
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+}
+
 .card-inventory {
   display: flex;
   align-content: center;
@@ -79,6 +90,7 @@
   text-align: center;
   background-color: rgb(0, 168, 107);
   box-sizing: border-box;
+  flex-wrap: nowrap;
 }
 
 #card-name {
@@ -86,8 +98,9 @@
   margin-bottom: 3px;
   color: white;
   background-color: peru;
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-family: "Franklin Gothic Medium";
   font-weight: bold;
+  font-size: 14px;
   padding: 2px;
 }
 
@@ -105,12 +118,20 @@
   color: white;
   font-size: 13px;
   border: 1px solid black;
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-family: "Franklin Gothic Medium";
   font-weight: bold;
 }
 
+.player-card-health-container {
+  color: rgb(137, 11, 11);
+}
+
+.attack-container-class {
+  color: rgb(18, 18, 102);
+}
+
 .special-attack-container {
-  font-size: 8.5px;
+  font-size: 9px;
   color: black;
   margin-top: 6px;
 }
@@ -165,9 +186,11 @@ left: 43%; */
   text-align: center;
   font-weight: bold;
   background-color: rgb(33, 33, 76);
-  width: 100px;
+  max-width: 220px;
   align-self: center;
   border-radius: 5px;
+  padding: 2px 6px 2px 6px;
+  font-size: 15px;
 }
 
 .enemy-img {
@@ -178,7 +201,7 @@ left: 43%; */
 }
 
 #enemy-health-container {
-  width: 400px;
+  width: 100%;
   height: 50%;
   background-color: rgb(195, 22, 22);
   border-radius: 5px;
@@ -188,16 +211,19 @@ left: 43%; */
   color: white;
   font-size: 18px;
   align-self: center;
+  max-width: 400px;
 }
 
 #enemy-attack-container {
   border-radius: 7px;
   align-self: center;
-  width: 145px;
+  width: 130px;
   text-align: center;
   font-weight: bold;
   color: white;
   background-color: rgb(31, 20, 70);
+  font-size: 15px;
+  padding: 1spx 4px 1px 4px;
 }
 
 /* Card screens */
