--- a/styles.css
+++ b/styles.css
@@ -60,6 +60,17 @@
   z-index: 10;
 }
 
+#player-lives-counter-id {
+  font-size: 16px;
+  border: 3.5px solid peru;
+  left: 1%;
+  width: 80px;
+  position: absolute;
+  text-align: center;
+  background-color: rgb(0, 168, 107);
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+}
+
 .level-counter {
   font-size: 16px;
   border: 3.5px solid peru;
